--- a/package.json
+++ b/package.json
@@ -19,7 +19,12 @@
     "react-helmet": "^5.2.1"
   },
   "devDependencies": {
-    "prettier": "^1.19.1"
+    "@types/react": "^16.9.34",
+    "eslint": "^6.8.0",
+    "husky": "^4.2.5",
+    "lint-staged": "^10.1.3",
+    "prettier": "npm:@btmills/prettier",
+    "typescript": "^3.8.3"
   },
   "keywords": [
     "gatsby"
