--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "gatsby-starter-default",
+  "name": "pointz",
   "private": true,
-  "description": "A simple starter to get up and developing quickly with Gatsby",
+  "description": "Simple tool to remotely vote for points of a jira ticket",
   "version": "0.1.0",
-  "author": "Kyle Mathews <mathews.kyle@gmail.com>",
+  "author": "Yurick <yurick.hauschild@gmail.com>",
   "dependencies": {
     "bulma": "^0.8.1",
     "gatsby": "^2.20.12",
