--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "author": "Yurick <yurick.hauschild@gmail.com>",
   "dependencies": {
     "bulma": "^0.8.1",
+    "firebase": "^7.14.0",
     "gatsby": "^2.20.12",
     "gatsby-image": "^2.3.1",
     "gatsby-plugin-manifest": "^2.3.3",
