--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,6 +1,6 @@
 {
   "parser": "@typescript-eslint/parser",
-  "plugins": ["react"],
+  "plugins": ["react", "react-hooks"],
   "root": true,
   "extends": [
     "eslint:recommended",
@@ -40,7 +40,9 @@
         "argsIgnorePattern": "_.*"
       }
     ],
-    "react/prop-types": "off"
+    "react/prop-types": "off",
+    "react-hooks/rules-of-hooks": "error", // Checks rules of Hooks
+    "react-hooks/exhaustive-deps": "warn" // Checks effect dependencies
   },
   "settings": {
     "react": {
