--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@types/react": "^16.9.34",
     "eslint": "^6.8.0",
     "eslint-config-prettier": "^6.10.1",
+    "eslint-plugin-react-hooks": "^3.0.0",
     "husky": "^4.2.5",
     "lint-staged": "^10.1.3",
     "prettier": "npm:@btmills/prettier",
