--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "version": "0.1.0",
   "author": "Yurick <yurick.hauschild@gmail.com>",
   "dependencies": {
+    "@gutenpress/helpers": "^0.0.0-alpha.6",
     "@reach/router": "^1.3.3",
     "bulma": "^0.8.1",
     "firebase": "^7.14.0",
