📄 Add a basic README
Fixes #5

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "pointz",
   "private": true,
-  "description": "Simple tool to remotely vote for points of a jira ticket",
+  "description": "Simple tool to have a remote session of planning poker",
   "version": "0.1.0",
   "author": "Yurick <yurick.hauschild@gmail.com>",
   "dependencies": {
