🐛 Verify why updateVoteWhenTicketChanges is not kicking in

--- a/functions/tsconfig.json
+++ b/functions/tsconfig.json
@@ -3,11 +3,10 @@
     "module": "commonjs",
     "noImplicitReturns": true,
     "noUnusedLocals": true,
-    "rootDir": "src",
     "outDir": "lib",
     "sourceMap": true,
     "strict": true,
     "target": "es2017"
   },
-  "include": ["src"]
+  "include": ["src", "types"]
 }
