--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
-    "react-helmet": "^5.2.1"
+    "react-helmet": "^5.2.1",
+    "short-uuid": "^3.1.1"
   },
   "devDependencies": {
     "@types/react": "^16.9.34",
